# lovett-old

./: .gitignore  Makefile  README.rst  TODO  notes.org  requirements.txt  setup.cfg  setup.py
doc/: Makefile  conf.py  index.rst  psdx-format.rst
lovett/: __init__.py  annotald.py  corpus.py  io.py  psd.py  psd_tree.py  searchfns.py  transformer.py  tree.py  tree_new.py  tree_util.py  tree_xml.py  util.py
lovett/cli/: cli.py
lovett/cs/: coding.py  searchfns.py  transformer.py
lovett/data/: .gitignore  Makefile  psdx.rnc
lovett/tests/: corpus_test.py  corpus_xml_test.py  io_test.py  psd_test.py  searchfns_test.py  searchfns_xml_test.py  tree_new_test.py  tree_test.py  tree_xml_test.py  util_test.py  utils.py
tests/: io_test.py  searchfns_test.py  tree_new_test.py  tree_test.py  util_test.py
tree_util/: tree_util.py
treetrans/: searchfns.py  transformer.py
