[flake8]
ignore = E302,N802

[nosetests]
with-path=/home/aecay/development/lovett

[metadata]
name = lovett
author = Aaron Ecay
author-email = aaronecay@gmail.com
summary = Tools for manipulating parsed corpora
description-file = README.rst
license = GPL3

[files]
packages =
    lovett
data_files =
    data = data/*

[entry_points]
console_scripts =
    lovett = lovett.cli.cli:cli

[build_sphinx]
all_files = 1
build-dir = doc/_build
source-dir = doc/

[pbr]
# autodoc_tree_index_modules = True
autodoc_index_modules = True
warnerrors = True
